tests/snapshots/execution_spec__recursive-types.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "https://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  user: User @http(path: "/users/1")
}

type User {
  friend: User @http(path: "/friends/1")
  id: Int
  name: String
}
