tests/snapshots/execution_spec__ref-other-nested.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "https://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  firstUser: User1 @http(baseURL: "https://jsonplaceholder.typicode.com", path: "/users/1")
}

type User {
  id: Int
  name: String
}

type User1 {
  user1: User2
}

type User2 {
  user2: User @http(baseURL: "https://jsonplaceholder.typicode.com", path: "/users/1")
}
