tests/snapshots/execution_spec__ref-other-nested.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "firstUser": {
        "user1": {
          "user2": {
            "name": "Leanne Graham"
          }
        }
      }
    }
  }
}
