tests/snapshots/execution_spec__ref-other.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "https://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  firstUser: User1
}

type User {
  id: Int
  name: String
}

type User1 {
  user1: User @http(path: "/users/1")
}
