tests/snapshots/execution_spec__ref-other.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "firstUser": {
        "user1": {
          "name": "Leanne Graham"
        }
      }
    }
  }
}
