tests/snapshots/execution_spec__rename-field.md_assert_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user2": {
        "name": "Ervin Howell"
      }
    }
  }
}
