tests/snapshots/execution_spec__rename-field.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  user1: User
  user2: User
}

scalar Url

type User {
  name: String
}

schema {
  query: Query
}
